Fix chat's going off screen on mobile

--- a/src/views/KidsGame/ChatBubble.styl
+++ b/src/views/KidsGame/ChatBubble.styl
@@ -10,8 +10,15 @@
 
     &.opponent {
         left: 10rem;
+
+        +portrait() {
+            left: 0;
+        }
     }
     &.player {
         right: 10rem;
+        +portrait() {
+            right: 0;
+        }
     }
 }
